feat: Reorganise Redux store to use official recommended Redux structure

--- a/src/components/App/app.pcss
+++ b/src/components/App/app.pcss
@@ -36,7 +36,7 @@
   /* Use composes for mixing in a bunch of rules
    * ~ makes PostCSS use Webpack to resolve @src
    * In this case we are giving the title a smaller font size */
-  composes: f3 from "~@src/styles/typography.scss";
+  composes: f3 from "~@src/styles/typography.pcss";
 }
 
 .grid {
