--- a/src/styles/root.pcss
+++ b/src/styles/root.pcss
@@ -6,8 +6,8 @@
 */
 
 /* Relative path resolution */
-@import "./typography.scss";
-@import "./variables.scss";
+@import "./typography.pcss";
+@import "./variables.pcss";
 
 /* Global HTML rules
  * Normalize html, body tags */
