--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -57,13 +57,13 @@
   --m-xl: calc(var(--m) * 16);
   --curve: 2px;
 
-  /* Change the root font-size in root.scss
+  /* Change the root font-size in root.pcss
    * Avoid using these directly; you want things like line-height, weight, and spacing
    * The naming here is accordingly annoying long to discourage direct use
-   * Instead, use CSS modules `composes` from typography.scss as such:
+   * Instead, use CSS modules `composes` from typography.pcss as such:
    * ```
    * .myClass {
-   *   composes: f2 from "@src/styles/typography.scss";
+   *   composes: f2 from "@src/styles/typography.pcss";
    * }
    */
   --font-size-small: 0.75rem;
